Added new fonts

--- a/index.html
+++ b/index.html
@@ -154,31 +154,31 @@
     <div class="row pb-4">
         <div class="col-2 upcoming-events me-5">
             <!-- Removed extra styles from here -->
-            <h3 class="text-muted fs-6 fw-bold mt-4 mb-4">Upcoming Events</h3>
+            <h3 class="upcoming-events-date fs-6 mt-4 mb-4">Upcoming Events</h3>
             <div class="event mb-5">
-                <p class="fs-6 ep fw-medium" style="margin-bottom: 0">
+                <p class="fs-6 ep" style="margin-bottom: 0">
                     Event .... swamp bots competing against many teams... championship
                 </p>
-                <p class="text-muted fs-6 fw-medium">October 20, 2024</p>
+                <p class="text-muted fs-6 event-date">October 20, 2024</p>
             </div>
 
             <div class="event mb-5">
-                <p class="fs-6 ep fw-medium" style="margin-bottom: 0">
+                <p class="fs-6 ep" style="margin-bottom: 0">
                     Event .... swamp bots competing against many teams... championship
                 </p>
-                <p class="text-muted fs-6 fw-medium">October 20, 2024</p>
+                <p class="text-muted fs-6 event-date">October 20, 2024</p>
             </div>
 
             <div class="event mb-5">
-                <p class="fs-6 ep fw-medium" style="margin-bottom: 0">
+                <p class="fs-6 ep" style="margin-bottom: 0">
                     Event .... swamp bots competing against many teams... championship
                 </p>
-                <p class="text-muted fs-6 fw-medium">October 20, 2024</p>
+                <p class="text-muted fs-6 event-date">October 20, 2024</p>
             </div>
         </div>
 
         <div class="col-7">
-            <h1 class="fw-bold fs-0">
+            <h1 class="fs-0">
                 River Bluff Swamp Bots are Preparing Students to be Career Ready
             </h1>
         </div>
@@ -197,7 +197,7 @@
 
             <!-- button animation to scroll to next section-->
             <script>
-                document.getElementById("scroll-button").addEventListener("click", function(event) {
+                document.getElementById("scroll-button").addEventListener("click", function (event) {
                     event.preventDefault();
                     document.querySelector("#read-more-target").scrollIntoView({
                         behavior: "smooth"
@@ -211,12 +211,12 @@
 </div>
 
 
-
 <div class="container-fluid mb-5" id="read-more-target" style="height: 700px">
     <div class="row ml-main me-main mb-5">
         <div class="col-5 mt-6">
             <h1 class="fw-bold fs-main-h mb-4">Swamp Bots</h1>
-            <p class="main-p fs-main-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae justo eget erat
+            <p class="main-p fs-main-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae justo eget
+                erat
                 vehicula porttitor et at nulla. Phasellus et turpis nibh. Curabitur ultricies, erat nec ullamcorper
                 suscipit, quam risus consectetur ligula, in efficitur nulla justo eget urna. Aenean dictum, ex sed
                 ornare finibus, mauris est dignissim velit, a aliquet ipsum risus at nisl. Vivamus eget mi id lorem
@@ -280,7 +280,8 @@
         <div class="col-6 mt-5">
             <h1 class="fw-bold fs-stats stats-text">A Legacy to be Remembered</h1>
             <blockquote class="fw-bold mt-4">
-                Over the 10 years of competing on the international VRC stage, our club has competed at all levels of competition with a legacy like no other.
+                Over the 10 years of competing on the international VRC stage, our club has competed at all levels of
+                competition with a legacy like no other.
             </blockquote>
 
             <!-- TODO: Button goes to legacy page -->
@@ -316,8 +317,7 @@
 <div class="container-fluid">
     <div class="row ml-main me-main mt-6 text-center">
         <h1 class="text-center mb-5">Frequently Asked Questions</h1>
-        <div class="col-4">
-            <h2>I'm new to robotics, where can I start?</h2>
+        <div class="col-4"><h2>I'm new to robotics, where can I start?</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae justo eget erat
                 vehicula porttitor et at nulla. Phasellus et turpis nibh. Curabitur ultricies,</p>
         </div>
@@ -333,5 +333,18 @@
         </div>
     </div>
 </div>
+
+<!-- Footer -->
+<div class="container-fluid footer mt-5 pb-5">
+    <div class="row ml-main me-main">
+        <div class="col-2 mt-5">
+            <h4>ABOUT US</h4>
+            <h5>Home</h5>
+            <h5>Adivsors</h5>
+            <h5>Our School</h5>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
