#CFB687 (RBHS Gold) highlights and expanded FAQ section

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 </nav>
 
 <!-- Main Content -->
+<!-- TODO: Added background image -->
 <div class="container-fluid main vh-100">
     <div class="row pb-4">
         <div class="col-2 upcoming-events me-5">
@@ -263,7 +264,7 @@
                 vehicula porttitor et at nulla. Phasellus et turpis nibh. Curabitur ultricies,</p>
         </div>
         <div class="col-4 mt-5">
-            <h1 class="fw-bold fs-3 mb-4">Not a Club, <span class="text-secondary">But a Family</span></h1>
+            <h1 class="fw-bold fs-3 mb-4">Not a Club, <span style="color: #2E703B">But a Family</span></h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae justo eget erat
                 vehicula porttitor et at nulla. Phasellus et turpis nibh. Curabitur ultricies,</p>
         </div>
@@ -278,7 +279,7 @@
 <div class="container-fluid stats" style="height: 500px;">
     <div class="row ml-main me-main">
         <div class="col-6 mt-5">
-            <h1 class="fw-bold fs-stats stats-text">A Legacy to be Remembered</h1>
+            <h1 class="fs-stats stats-text">A <span style="color: #CFB687">Legacy</span> to be Remembered</h1>
             <blockquote class="fw-bold mt-4">
                 Over the 10 years of competing on the international VRC stage, our club has competed at all levels of
                 competition with a legacy like no other.
@@ -314,9 +315,26 @@
 </div>
 
 <!-- FAQ -->
-<div class="container-fluid">
+<div class="container-fluid faq pb-5">
     <div class="row ml-main me-main mt-6 text-center">
         <h1 class="text-center mb-5">Frequently Asked Questions</h1>
+        <div class="col-4"><h2>I'm new to robotics, where can I start?</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae justo eget erat
+                vehicula porttitor et at nulla. Phasellus et turpis nibh. Curabitur ultricies,</p>
+        </div>
+        <div class="col-4">
+            <h2>When and where do you meet?</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae justo eget erat
+                vehicula porttitor et at nulla. Phasellus et turpis nibh. Curabitur ultricies,</p>
+        </div>
+        <div class="col-4">
+            <h2>What is a VEX competition like?</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae justo eget erat
+                vehicula porttitor et at nulla. Phasellus et turpis nibh. Curabitur ultricies,</p>
+        </div>
+    </div>
+
+    <div class="row ml-main me-main mt-6 text-center">
         <div class="col-4"><h2>I'm new to robotics, where can I start?</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae justo eget erat
                 vehicula porttitor et at nulla. Phasellus et turpis nibh. Curabitur ultricies,</p>
