fixed some highlights

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
+        <!-- TODO: Collapse animations with down arrow turning into up arrow -->
         <div class="collapse navbar-collapse" id="navbarNav5">
             <ul class="navbar-nav">
                 <!-- About Dropdown -->
