Green footer and more vegas gold highlights

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 vehicula porttitor et at nulla. Phasellus et turpis nibh. Curabitur ultricies,</p>
         </div>
         <div class="col-4 mt-5">
-            <h1 class="fw-bold fs-3 mb-4">Not a Club, <span style="color: #2E703B">But a Family</span></h1>
+            <h1 class="fw-bold fs-3 mb-4">Not a Club, <span style="color: #CFB687">But a Family</span></h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae justo eget erat
                 vehicula porttitor et at nulla. Phasellus et turpis nibh. Curabitur ultricies,</p>
         </div>
@@ -390,7 +390,8 @@
         </div>
     </div>
 
-    <hr class="ml-main me-main">
+    <hr class="ml-main me-main mt-5">
+
     <div class="row ml-main me-main">
         <div class="col-6 mt-3 text-start">
             <h6>© 2024 Swamp Bots. All rights reserved.</h6>
