Advisors and Teams

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <div class="container-fluid mb-5" id="read-more-target" style="height: 700px">
     <div class="row ml-main me-main mb-5">
         <div class="col-5 mt-6">
-            <h1 class="fw-bold fs-main-h mb-4">Swamp Bots</h1>
+            <h1 class="fw-bold fs-main-h mb-4" style="color: #124532">Swamp Bots</h1>
             <p class="main-p fs-main-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae justo eget
                 erat
                 vehicula porttitor et at nulla. Phasellus et turpis nibh. Curabitur ultricies, erat nec ullamcorper
