--- a/src/advisors.html
+++ b/src/advisors.html
@@ -15,7 +15,7 @@
             href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
             rel="stylesheet"
     />
-    <link href="styles.css" rel="stylesheet"/>
+    <link href="../styles.css" rel="stylesheet"/>
     <!-- Link to your external CSS file -->
     <title>Bootstrap Example</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -23,10 +23,10 @@
 
 <body class="m-0 border-0">
 <div id="navbar">
-    <script src="include/navbar.js"></script>
+    <script src="../include/navbar.js"></script>
 </div>
 
-<div class="container-fluid sponsor" style="height: 600px;">
+<div class="container-fluid general" style="height: 600px;">
     <div class="row me-main ml-main">
         <h1 class="fs-0 text-center">Our <span style="color: #CFB687">Advisors</span>...</h1>
         <h3 class="fs-2 text-center">Support Us,</h3>
@@ -66,7 +66,7 @@
 <div class="container-fluid advisor mt-5 mb-6" id="read-more-target">
     <div class="row ml-main me-main">
         <div class="col-6 mt-4">
-            <img src="horst.jpeg" alt="Horst Daichendt" class="advisor-image">
+            <img src="../horst.jpeg" alt="Horst Daichendt" class="advisor-image">
         </div>
 
         <div class="col-6">
@@ -80,7 +80,7 @@
 </div>
 
 <div id="footer">
-    <script src="include/footer.js"></script>
+    <script src="../include/footer.js"></script>
 </div>
 
 </body>
