--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
             href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
             rel="stylesheet"
     />
-    <link href="styles.css" rel="stylesheet"/>
+    <link href="../styles.css" rel="stylesheet"/>
     <!-- Link to your external CSS file -->
     <title>Bootstrap Example</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -23,7 +23,7 @@
 <body class="m-0 border-0">
 
 <div id="navbar">
-    <script src="include/navbar.js"></script>
+    <script src="../include/navbar.js"></script>
 </div>
 
 <!-- Main Content -->
@@ -106,15 +106,15 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="Swamp-Bots-Team-logo-768x1062-removebg.png" class="d-block w-100"
+                        <img src="../Swamp-Bots-Team-logo-768x1062-removebg.png" class="d-block w-100"
                              alt="Swamp Bots Team Logo">
                     </div>
                     <div class="carousel-item">
-                        <img src="Swamp-Bots-Team-logo-768x1062-removebg.png" class="d-block w-100"
+                        <img src="../Swamp-Bots-Team-logo-768x1062-removebg.png" class="d-block w-100"
                              alt="Swamp Bots Team Logo">
                     </div>
                     <div class="carousel-item">
-                        <img src="Swamp-Bots-Team-logo-768x1062-removebg.png" class="d-block w-100"
+                        <img src="../Swamp-Bots-Team-logo-768x1062-removebg.png" class="d-block w-100"
                              alt="Swamp Bots Team Logo">
                     </div>
                 </div>
@@ -230,7 +230,7 @@
 
 <!-- Footer -->
 <div id="footer">
-    <script src="include/footer.js"></script>
+    <script src="../include/footer.js"></script>
 </div>
 
 </body>
