--- a/src/sponsor.html
+++ b/src/sponsor.html
@@ -15,7 +15,7 @@
             href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
             rel="stylesheet"
     />
-    <link href="styles.css" rel="stylesheet"/>
+    <link href="../styles.css" rel="stylesheet"/>
     <!-- Link to your external CSS file -->
     <title>Bootstrap Example</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -23,10 +23,10 @@
 
 <body class="m-0 border-0">
 <div id="navbar">
-    <script src="include/navbar.js"></script>
+    <script src="../include/navbar.js"></script>
 </div>
 
-<div class="container-fluid sponsor" style="height: 500px;">
+<div class="container-fluid general" style="height: 500px;">
     <div class="row me-main ml-main">
         <h1 class="fs-0 text-center">Sponsor <span style="color: #CFB687">Us</span> Today!</h1>
     </div>
@@ -85,15 +85,15 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="Swamp-Bots-Team-logo-768x1062-removebg.png" class="d-block w-100"
+                        <img src="../Swamp-Bots-Team-logo-768x1062-removebg.png" class="d-block w-100"
                              alt="Swamp Bots Team Logo">
                     </div>
                     <div class="carousel-item">
-                        <img src="Swamp-Bots-Team-logo-768x1062-removebg.png" class="d-block w-100"
+                        <img src="../Swamp-Bots-Team-logo-768x1062-removebg.png" class="d-block w-100"
                              alt="Swamp Bots Team Logo">
                     </div>
                     <div class="carousel-item">
-                        <img src="Swamp-Bots-Team-logo-768x1062-removebg.png" class="d-block w-100"
+                        <img src="../Swamp-Bots-Team-logo-768x1062-removebg.png" class="d-block w-100"
                              alt="Swamp Bots Team Logo">
                     </div>
                 </div>
@@ -132,7 +132,7 @@
 </div>
 
 <div id="footer">
-    <script src="include/footer.js"></script>
+    <script src="../include/footer.js"></script>
 </div>
 
 </body>
