--- a/src/teams.html
+++ b/src/teams.html
@@ -15,7 +15,7 @@
             href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
             rel="stylesheet"
     />
-    <link href="styles.css" rel="stylesheet"/>
+    <link href="../styles.css" rel="stylesheet"/>
     <!-- Link to your external CSS file -->
     <title>Bootstrap Example</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -23,10 +23,10 @@
 
 <body class="teams m-0 border-0">
 <div id="navbar">
-    <script src="include/navbar.js"></script>
+    <script src="../include/navbar.js"></script>
 </div>
 
-<div class="container-fluid sponsor" style="height: 600px;">
+<div class="container-fluid general" style="height: 600px;">
     <div class="row me-main ml-main">
         <h1 class="fs-0 text-center">Our <span style="color: #CFB687">Teams</span></h1>
         <h1 class="fs-0 text-center"><span style="color: #CFB687">Empower</span> each other</h1>
@@ -64,7 +64,7 @@
 <div class="container-fluid advisor mt-5 mb-6" id="read-more-target">
     <div class="row ml-main me-main mb-5">
         <div class="col-6 mt-4">
-            <img src="white-gears.jpg" alt="Horst Daichendt" class="advisor-image"
+            <img src="../white-gears.jpg" alt="Horst Daichendt" class="advisor-image"
                  style="filter: grayscale(100%) brightness(0%);">
         </div>
 
@@ -119,7 +119,7 @@
         </div>
 
         <div class="col-6 mt-4 d-flex justify-content-end">
-            <img src="white-gears.jpg" alt="Horst Daichendt" class="advisor-image" style="filter: grayscale(100%) brightness(0%);">
+            <img src="../white-gears.jpg" alt="Horst Daichendt" class="advisor-image" style="filter: grayscale(100%) brightness(0%);">
         </div>
 
     </div>
@@ -128,7 +128,7 @@
 
     <div class="row ml-main me-main mt-5 mb-5">
         <div class="col-6 mt-4">
-            <img src="white-gears.jpg" alt="Horst Daichendt" class="advisor-image"
+            <img src="../white-gears.jpg" alt="Horst Daichendt" class="advisor-image"
                  style="filter: grayscale(100%) brightness(0%);">
         </div>
 
@@ -162,7 +162,7 @@
 </div>
 
 <div id="footer">
-    <script src="include/footer.js"></script>
+    <script src="../include/footer.js"></script>
 </div>
 
 </body>
