Added navbar and footer

--- a/src/upcoming-events.html
+++ b/src/upcoming-events.html
@@ -23,7 +23,12 @@
 
 <body class="m-0 border-0">
 
-<div class="container-fluid general" style="height: 500px;">
+<div id="navbar">
+    <script src="../include/navbar.js"></script>
+</div>
+
+<!-- TODO: Add smaller cards for adjacent events -->
+<div class="container-fluid general" style="height: 800px;">
     <div class="row me-main ml-main">
         <h1 class="fs-0 text-center">Upcoming Events!</h1>
     </div>
@@ -86,6 +91,10 @@
         });
     });
 </script>
+
+<div id="footer">
+    <script src="../include/footer.js"></script>
+</div>
 
 </body>
 </html>
