--- a/src/upcoming-events.html
+++ b/src/upcoming-events.html
@@ -17,7 +17,7 @@
     />
     <link href="../styles.css" rel="stylesheet"/>
     <!-- Link to your external CSS file -->
-    <title>Bootstrap Example</title>
+    <title>Upcoming Events</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
