Mobile Overlay coming soon

--- a/src/advisors.html
+++ b/src/advisors.html
@@ -26,6 +26,10 @@
     <script src="../include/navbar.js"></script>
 </div>
 
+<div class="mobile-coming-soon-overlay">
+    Mobile Coming Soon
+</div>
+
 <div class="container-fluid general" style="height: 600px;">
     <div class="row me-main ml-main">
         <h1 class="fs-0 text-center">Our <span style="color: #CFB687">Advisors</span>...</h1>
