--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,10 @@
     <script src="../include/navbar.js"></script>
 </div>
 
+<div class="mobile-coming-soon-overlay">
+    Mobile Coming Soon
+</div>
+
 <!-- Main Content -->
 <div class="container-fluid main vh-100">
     <div class="row pb-4">
