--- a/src/sponsor.html
+++ b/src/sponsor.html
@@ -26,6 +26,10 @@
     <script src="../include/navbar.js"></script>
 </div>
 
+<div class="mobile-coming-soon-overlay">
+    Mobile Coming Soon
+</div>
+
 <div class="container-fluid general" style="height: 500px;">
     <div class="row me-main ml-main">
         <h1 class="fs-0 text-center">Sponsor <span style="color: #CFB687">Us</span> Today!</h1>
