--- a/src/upcoming-events.html
+++ b/src/upcoming-events.html
@@ -27,6 +27,10 @@
     <script src="../include/navbar.js"></script>
 </div>
 
+<div class="mobile-coming-soon-overlay">
+    Mobile Coming Soon
+</div>
+
 <div class="container-fluid general fullview" style="padding-top: 150px">
     <div class="row me-main ml-main">
         <h1 class="fs-0 text-center pb-3">Upcoming Events</h1>
